--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
 asn1crypto==0.22.0
+boto==2.48.0
+boto3==1.4.4
+botocore==1.5.85
 certifi==2017.4.17
 cffi==1.10.0
 chardet==3.0.4
@@ -6,26 +9,38 @@ cryptography==1.9
 defusedxml==0.5.0
 dj-database-url==0.4.2
 dj-email-url==0.0.10
+dj-static==0.0.6
 Django==1.11.3
 django-allauth==0.32.0
 django-crispy-forms==1.6.1
 django-debug-toolbar==1.8
+django-storages==1.6.3
+django-toolbelt==0.0.1
+docutils==0.13.1
 ecdsa==0.13
+gunicorn==19.7.1
 http-ece==1.0.4
 idna==2.5
+jmespath==0.9.3
 markdown2==2.3.4
 oauthlib==2.0.2
 olefile==0.44
 Pillow==4.2.0
+psycopg2==2.7.1
 py-vapid==1.2.5
 pycparser==2.18
 pyelliptic==1.5.7
+python-dateutil==2.6.1
 python-decouple==3.0
+python-http-client==2.4.0
 python3-openid==3.1.0
 pytz==2017.2
 pywebpush==1.0.5
 requests==2.18.1
 requests-oauthlib==0.8.0
+s3transfer==0.1.10
+sendgrid==4.2.0
 six==1.10.0
 sqlparse==0.2.3
+static3==0.7.0
 urllib3==1.21.1
