--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 asn1crypto==0.22.0
+autopep8==1.3.2
 boto==2.48.0
 boto3==1.4.4
 botocore==1.5.85
 certifi==2017.4.17
 cffi==1.10.0
 chardet==3.0.4
+coverage==4.3.3
 cryptography==1.9
 defusedxml==0.5.0
 dj-database-url==0.4.2
@@ -12,31 +14,41 @@ dj-email-url==0.0.10
 dj-static==0.0.6
 Django==1.11.3
 django-allauth==0.32.0
+django-coverage-plugin==1.4
 django-crispy-forms==1.6.1
 django-debug-toolbar==1.8
+django-silk==1.0.0
 django-storages==1.6.3
 django-toolbelt==0.0.1
 docutils==0.13.1
 ecdsa==0.13
+future==0.16.0
 gunicorn==19.7.1
-http-ece==1.0.4
+http-ece==0.7.1
 idna==2.5
+Jinja2==2.9.6
 jmespath==0.9.3
 markdown2==2.3.4
+MarkupSafe==1.0
+newrelic==2.88.1.73
 oauthlib==2.0.2
 olefile==0.44
 Pillow==4.2.0
 psycopg2==2.7.1
-py-vapid==1.2.5
+py-vapid==0.8.1
+pycodestyle==2.3.1
 pycparser==2.18
+pycrypto==2.6.1
 pyelliptic==1.5.7
+Pygments==2.2.0
 python-dateutil==2.6.1
 python-decouple==3.0
 python-http-client==2.4.0
+python-jose==1.3.2
 python3-openid==3.1.0
 pytz==2017.2
-pywebpush==1.0.5
-requests==2.18.1
+pywebpush==0.8.0
+requests==2.13.0
 requests-oauthlib==0.8.0
 s3transfer==0.1.10
 sendgrid==4.2.0
