--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ dj-email-url==0.0.10
 dj-static==0.0.6
 Django==1.11.3
 django-allauth==0.32.0
+django-bootstrap-form==3.2.1
 django-coverage-plugin==1.4
 django-crispy-forms==1.6.1
 django-debug-toolbar==1.8
