--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ dj-email-url==0.0.10
 dj-static==0.0.6
 Django==1.11.3
 django-allauth==0.32.0
+django-appconf==1.0.2
 django-bootstrap-form==3.2.1
 django-coverage-plugin==1.4
 django-crispy-forms==1.6.1
@@ -35,6 +36,7 @@ newrelic==2.88.1.73
 oauthlib==2.0.2
 olefile==0.44
 Pillow==4.2.0
+pinax-notifications==4.0.0
 psycopg2==2.7.1
 py-vapid==0.8.1
 pycodestyle==2.3.1
