--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
+airbrake==2.1.0
 asn1crypto==0.22.0
 autopep8==1.3.2
 boto==2.48.0
 boto3==1.4.4
 botocore==1.5.85
-certifi==2017.4.17
+certifi==2017.7.27.1
 cffi==1.10.0
 chardet==3.0.4
 coverage==4.3.3
@@ -52,11 +53,11 @@ python-jose==1.3.2
 python3-openid==3.1.0
 pytz==2017.2
 pywebpush==0.8.0
-requests==2.13.0
+requests==2.18.3
 requests-oauthlib==0.8.0
 s3transfer==0.1.10
 sendgrid==4.2.0
 six==1.10.0
 sqlparse==0.2.3
 static3==0.7.0
-urllib3==1.21.1
+urllib3==1.22
