--- a/requirements.txt
+++ b/requirements.txt
@@ -33,6 +33,7 @@ http-ece==0.7.1
 idna==2.5
 Jinja2==2.9.6
 jmespath==0.9.3
+keen==0.4.0
 markdown2==2.3.4
 MarkupSafe==1.0
 newrelic==2.88.1.73
@@ -44,6 +45,7 @@ py-vapid==0.8.1
 pycodestyle==2.3.1
 pycparser==2.18
 pycrypto==2.6.1
+pycryptodome==3.4.6
 pyelliptic==1.5.7
 Pygments==2.2.0
 python-dateutil==2.6.1
@@ -53,7 +55,7 @@ python-jose==1.3.2
 python3-openid==3.1.0
 pytz==2017.2
 pywebpush==0.8.0
-requests==2.18.3
+requests==2.10.0
 requests-oauthlib==0.8.0
 s3transfer==0.1.10
 sendgrid==4.2.0
