--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-airbrake==2.1.0
 asn1crypto==0.22.0
 autopep8==1.3.2
 boto==2.48.0
@@ -28,19 +27,21 @@ django-toolbelt==0.0.1
 docutils==0.13.1
 ecdsa==0.13
 future==0.16.0
+get==0.0.21
 gunicorn==19.7.1
 http-ece==0.7.1
 idna==2.5
 Jinja2==2.9.6
 jmespath==0.9.3
-keen==0.4.0
 markdown2==2.3.4
 MarkupSafe==1.0
 newrelic==2.88.1.73
 oauthlib==2.0.2
 olefile==0.44
 Pillow==4.2.0
+post==0.0.13
 psycopg2==2.7.1
+public==0.0.38
 py-vapid==0.8.1
 pycodestyle==2.3.1
 pycparser==2.18
@@ -55,10 +56,13 @@ python-jose==1.3.2
 python3-openid==3.1.0
 pytz==2017.2
 pywebpush==0.8.0
-requests==2.10.0
+query-string==0.0.12
+request==0.0.13
+requests==2.18.3
 requests-oauthlib==0.8.0
 s3transfer==0.1.10
 sendgrid==4.2.0
+setupfiles==0.0.50
 six==1.10.0
 sqlparse==0.2.3
 static3==0.7.0
