--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
+arrow==0.10.0
 asn1crypto==0.22.0
 autopep8==1.3.2
+blessed==1.14.2
 boto==2.48.0
 boto3==1.4.4
 botocore==1.5.85
@@ -21,7 +23,9 @@ django-crispy-forms==1.6.1
 django-debug-toolbar==1.8
 django-jsonfield==1.0.1
 django-notify-x==0.1.7
+django-picklefield==1.0.0
 django-post-office==3.0.3
+django-q==0.8.0
 django-silk==1.0.0
 django-storages==1.6.3
 django-toolbelt==0.0.1
@@ -69,3 +73,4 @@ six==1.10.0
 sqlparse==0.2.3
 static3==0.7.0
 urllib3==1.22
+wcwidth==0.1.7
