--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+apns2==0.3.0
 arrow==0.10.0
 asn1crypto==0.22.0
 autopep8==1.3.2
@@ -25,6 +26,7 @@ django-jsonfield==1.0.1
 django-notify-x==0.1.7
 django-picklefield==1.0.0
 django-post-office==3.0.3
+django-push-notifications==1.5.0
 django-q==0.8.0
 django-silk==1.0.0
 django-storages==1.6.3
@@ -34,7 +36,11 @@ ecdsa==0.13
 future==0.16.0
 get==0.0.21
 gunicorn==19.7.1
+h2==2.6.2
+hpack==3.0.0
 http-ece==0.7.1
+hyper==0.7.0
+hyperframe==3.2.0
 idna==2.5
 Jinja2==2.9.6
 jmespath==0.9.3
@@ -55,6 +61,7 @@ pycrypto==2.6.1
 pycryptodome==3.4.6
 pyelliptic==1.5.7
 Pygments==2.2.0
+PyJWT==1.5.2
 python-dateutil==2.6.1
 python-decouple==3.0
 python-http-client==2.4.0
@@ -70,6 +77,7 @@ s3transfer==0.1.10
 sendgrid==4.2.0
 setupfiles==0.0.50
 six==1.10.0
+sparkpost==1.3.5
 sqlparse==0.2.3
 static3==0.7.0
 urllib3==1.22
