--- a/requirements.txt
+++ b/requirements.txt
@@ -23,10 +23,9 @@ django-coverage-plugin==1.4
 django-crispy-forms==1.6.1
 django-debug-toolbar==1.8
 django-jsonfield==1.0.1
-django-notify-x==0.1.7
+django-model-utils==3.0.0
 django-picklefield==1.0.0
 django-post-office==3.0.3
-django-push-notifications==1.5.0
 django-q==0.8.0
 django-silk==1.0.0
 django-storages==1.6.3
@@ -47,6 +46,7 @@ jmespath==0.9.3
 jsonfield==2.0.2
 markdown2==2.3.4
 MarkupSafe==1.0
+ndg-httpsclient==0.4.2
 newrelic==2.88.1.73
 oauthlib==2.0.2
 olefile==0.44
@@ -54,7 +54,9 @@ Pillow==4.2.0
 post==0.0.13
 psycopg2==2.7.1
 public==0.0.38
+pusher==1.7.2
 py-vapid==0.8.1
+pyasn1==0.3.2
 pycodestyle==2.3.1
 pycparser==2.18
 pycrypto==2.6.1
@@ -62,6 +64,7 @@ pycryptodome==3.4.6
 pyelliptic==1.5.7
 Pygments==2.2.0
 PyJWT==1.5.2
+pyOpenSSL==17.2.0
 python-dateutil==2.6.1
 python-decouple==3.0
 python-http-client==2.4.0
@@ -74,7 +77,6 @@ request==0.0.13
 requests==2.18.3
 requests-oauthlib==0.8.0
 s3transfer==0.1.10
-sendgrid==4.2.0
 setupfiles==0.0.50
 six==1.10.0
 sparkpost==1.3.5
